[gd_scene load_steps=19 format=3 uid="uid://cqg3k2c6eqa6m"]

[ext_resource type="Script" uid="uid://rd2bq3o18fef" path="res://scenes/ui/game_screen.gd" id="1_c0p0g"]
[ext_resource type="Theme" uid="uid://b3n8unqbh0or1" path="res://scenes/ui/game_ui_theme.tres" id="1_e2vrk"]
[ext_resource type="PackedScene" uid="uid://xs18jhgnkkjk" path="res://scenes/ui/emotes_panel.tscn" id="2_0kkfd"]
[ext_resource type="PackedScene" uid="uid://sljj6s2rh4dk" path="res://scenes/ui/tools_panel.tscn" id="2_gusqm"]
[ext_resource type="PackedScene" uid="uid://ha4s6dv11ovu" path="res://scenes/ui/inventory_panel.tscn" id="3_gusqm"]
[ext_resource type="PackedScene" uid="uid://c76fptlwg8nin" path="res://scenes/ui/day_and_night_panel.tscn" id="4_gkbp4"]
[ext_resource type="PackedScene" uid="uid://g2g0p7afvlyh" path="res://scenes/ui/recipe_detail_window.tscn" id="6_nwa5a"]
[ext_resource type="PackedScene" uid="uid://dx4n3qvx1lahm" path="res://machines/biofuel/bio_fuel_converter_menu.tscn" id="7_ooiym"]
[ext_resource type="PackedScene" uid="uid://bmwckryxuprqe" path="res://machines/ordinateur/RewardMachineMenu.tscn" id="8_ce4rh"]
[ext_resource type="PackedScene" uid="uid://goc2r5pjajyj" path="res://scenes/ui/Gauge.tscn" id="10_nktmq"]

[sub_resource type="Gradient" id="Gradient_c0p0g"]
offsets = PackedFloat32Array(0, 0.19697, 0.390152, 0.57197, 0.757576, 0.912879, 1)
colors = PackedColorArray(0, 1, 0, 1, 0.243137, 0.835294, 0.160784, 1, 0.666667, 0.858824, 0.219608, 1, 0.92549, 0.952941, 0.364706, 1, 0.831287, 0.479451, 0.209094, 1, 0.913725, 0.239216, 0.223529, 1, 1, 0.14902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nktmq"]
gradient = SubResource("Gradient_c0p0g")
height = 12
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_dscta"]
offsets = PackedFloat32Array(0, 0.19697, 0.390152, 0.57197, 0.757576, 0.912879, 1)
colors = PackedColorArray(0, 0.113725, 1, 1, 0.243137, 0.517647, 0.905882, 1, 0.243137, 0.858824, 0.929412, 1, 0.92549, 0.952941, 0.364706, 1, 0.831287, 0.479451, 0.209094, 1, 0.913725, 0.239216, 0.223529, 1, 1, 0.14902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wwq64"]
gradient = SubResource("Gradient_dscta")
height = 12
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_ywp2c"]
offsets = PackedFloat32Array(0, 0.19697, 0.390152, 0.57197, 0.757576, 0.912879, 1)
colors = PackedColorArray(0.564706, 0.113725, 0.894118, 1, 0.054902, 0.152941, 0.905882, 1, 0.243137, 0.858824, 0.929412, 1, 0.92549, 0.952941, 0.364706, 1, 0.831287, 0.479451, 0.209094, 1, 0.913725, 0.239216, 0.223529, 1, 1, 0.14902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pwika"]
gradient = SubResource("Gradient_ywp2c")
height = 12

[sub_resource type="Gradient" id="Gradient_4gsc8"]
offsets = PackedFloat32Array(0, 0.204545, 0.390152, 0.57197, 0.757576, 0.912879, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.167665, 0.000192956, 0.477514, 1, 0.243137, 0.811765, 0.701961, 1, 0.92549, 0.952941, 0.756863, 1, 0.982025, 0.802028, 0.684889, 1, 0.998298, 0.953698, 0.947613, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4pji1"]
gradient = SubResource("Gradient_4gsc8")
height = 12
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[node name="GameScreen" type="CanvasLayer"]
script = ExtResource("1_c0p0g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e2vrk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="EmotesPanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_0kkfd")]
layout_mode = 2
size_flags_horizontal = 4

[node name="ToolsPanel" parent="MarginContainer" instance=ExtResource("2_gusqm")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="DayAndNightPanel" parent="MarginContainer" instance=ExtResource("4_gkbp4")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="InventoryPanel" parent="." node_paths=PackedStringArray("recipe_detail_window") instance=ExtResource("3_gusqm")]
z_index = 10
offset_left = -11.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 11.0
size_flags_horizontal = 4
size_flags_vertical = 4
recipe_detail_window = NodePath("../RecipeDetailWindow")

[node name="RecipeDetailWindow" parent="." node_paths=PackedStringArray("inventory_panel") instance=ExtResource("6_nwa5a")]
inventory_panel = NodePath("../InventoryPanel")

[node name="BioFuelConverterMenu" parent="." instance=ExtResource("7_ooiym")]
visible = false

[node name="RewardMachineMenu" parent="." instance=ExtResource("8_ce4rh")]
visible = false

[node name="HUDContainer" type="MarginContainer" parent="."]
offset_right = 396.0
offset_bottom = 64.0

[node name="HBox" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="GaugeHealth" parent="HUDContainer/HBox" instance=ExtResource("10_nktmq")]
layout_mode = 2
size_flags_vertical = 0
texture_progress = SubResource("GradientTexture2D_nktmq")

[node name="GaugeOxygen" parent="HUDContainer/HBox" instance=ExtResource("10_nktmq")]
layout_mode = 2
texture_progress = SubResource("GradientTexture2D_wwq64")

[node name="GaugeHeat" parent="HUDContainer/HBox" instance=ExtResource("10_nktmq")]
layout_mode = 2
texture_progress = SubResource("GradientTexture2D_pwika")

[node name="GaugeGravity" parent="HUDContainer/HBox" instance=ExtResource("10_nktmq")]
layout_mode = 2
texture_progress = SubResource("GradientTexture2D_4pji1")
